testdata/baselines/reference/submodule/conformance/jsdocTemplateTag3.errors.txt
a.js(11,13): error TS2304: Cannot find name 'W'.
a.js(11,17): error TS2304: Cannot find name 'X'.


==== a.js (2 errors) ====
    /**
     * @template {{ a: number, b: string }} T,U A Comment
     * @template {{ c: boolean }} V uh ... are comments even supported??
     * @template W
     * @template X That last one had no comment
     * @param {T} t
     * @param {U} u
     * @param {V} v
     * @param {W} w
     * @param {X} x
     * @return {W | X}
                ~
!!! error TS2304: Cannot find name 'W'.
                    ~
!!! error TS2304: Cannot find name 'X'.
     */
    function f(t, u, v, w, x) {
        if(t.a + t.b.length > u.a - u.b.length && v.c) {
            return w;
        }
        return x;
    }
    
    f({ a: 12, b: 'hi', c: null }, undefined, { c: false, d: 12, b: undefined }, 101, 'nope');
    f({ a: 12  }, undefined, undefined, 101, 'nope');
    
    /**
     * @template {NoLongerAllowed}
     * @template T preceding line's syntax is no longer allowed
     * @param {T} x
     */
    function g(x) { }
    
    